window and renderer classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
 project(MyProject)
 
-add_executable(MyExecutable ../src/main.cpp ../src/Shader.cpp)
+add_executable(MyExecutable ../src/main.cpp ../src/Shader.cpp ../src/Window.cpp ../src/Renderer.cpp)
