Basic collision detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,11 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCES
     src/main.cpp
     src/Shader.cpp
-    src/meshes/Mesh.cpp
-    src/meshes/Plane.cpp
-    src/meshes/Cube.cpp
-    src/meshes/Circle.cpp
+    src/colliders/CubeCollider.cpp
+    src/meshes/PlaneMesh.cpp
+    src/meshes/CubeMesh.cpp
+    src/meshes/CircleMesh.cpp
+    src/objects/Cube.cpp
     src/Camera.cpp
     src/InputHandler.cpp
     src/Window.cpp
