--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
     src/meshes/CubeMesh.cpp
     src/meshes/CircleMesh.cpp
     src/objects/Cube.cpp
+    src/objects/Plane.cpp
     src/Camera.cpp
     src/InputHandler.cpp
     src/Window.cpp
@@ -25,3 +26,8 @@ find_package(GLFW3 REQUIRED)
 find_package(glm REQUIRED)
 
 target_link_libraries(OpenGLProject PRIVATE GLEW::GLEW glfw glm)
+
+add_custom_command(TARGET OpenGLProject POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/src/shaders $<TARGET_FILE_DIR:OpenGLProject>/shaders
+)
